# wine_classifier

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
etl/: CMakeLists.txt  etl.cpp  etl.h
notebooks/: eda.ipynb
python/: eda.ipynb  ml_testing.ipynb
scripts/: config.sh  run.sh
src/: main.cpp
src/etl/: etl.cpp  etl.h
src/modeling/: CMakeLists.txt  log_reg.cpp  log_reg.h
